# ErasmusHub-backend

./: .env.example  .gitignore  Caddyfile  README.md  caddy-root.crt  pyproject.toml  requirements.txt
.claude/worktrees/focused-hopper/: pyproject.toml
.claude/worktrees/focused-hopper/app/: main.py
api/routes/: admin.py  applications.py  auth.py  calificacion.py  chat.py  documents.py  exenciones.py  finalList.py  interviews.py  notificaciones.py  opportunities.py  opportunity_daily_notes.py  practicas.py  role.py  selection_process.py  tareas.py  users.py
app/: main.py
core/: database.py  security.py
docker/: docker-compose.yml
models/: __init__.py  application.py  application_document.py  asistencia.py  attendance.py  calificacion.py  chat.py  communication.py  comunicacion.py  daily_log.py  diario_practica.py  document.py  exemption.py  exencion.py  final_list.py  follow_up.py  horario_semanal.py  internship.py  interview.py  notification.py  notifications.py  opportunity.py  opportunity_daily_note.py  opportunity_teacher.py  practica.py  rol.py  role.py  seguimiento.py  selection_process.py  task.py  user.py  user_rol.py  user_role.py  weekly_schedule.py
schemas/: application_schema.py  auth_schema.py  calificacion_schema.py  chat_schema.py  document_schema.py  exencion_schema.py  notification_schema.py  opportunity_daily_note_schema.py  opportunity_schema.py  pagination.py  practica_schema.py  role_schema.py  task_schema.py  user_schema.py
scripts/: seed-opportunities.py
services/: auth_service.py  notification_service.py
(+2 files in other folders)
