[project]
name = "erasmushub-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "ElielDev",email = "elielbesayp@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1,<0.136.0",
    "uvicorn[standard]>=0.41.0,<0.42.0",
    "sqlmodel>=0.0.37,<0.0.38",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "python-jose[cryptography]>=3.5.0,<4.0.0",
    "python-multipart>=0.0.22,<0.0.23",
    "pydantic[email]>=2.12.5,<3.0.0",
    "cryptography>=46.0.5,<47.0.0",
    "python-dotenv>=1.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
